fix: Wrong padding on file
This is a regression from rectangular selection
Now, we have no padding for mobile to get the same UI as before
And we just add 1rem of left padding on desktop to get a space
to start rectangular selection

--- a/src/styles/filelist.styl
+++ b/src/styles/filelist.styl
@@ -2,7 +2,6 @@
 @require 'settings/z-index.styl'
 
 .fil-file-list-container
-    padding 0 2rem
     &:focus-visible
         outline 0
 
